--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Nizar
+middle_name: 
+last_name: Benbouchta
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  For any inquiries, please don't hesitate to send me an email or contact me via Linkedin 🤗
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -87,8 +87,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Personal blog # blog_name will be displayed in your blog page
+blog_description: Blogposts and personal notes
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
