--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,14 @@
 github_users:
   - Nizben
 
-repo_description_lines_max: 4
+repo_description_lines_max: 3
 
 github_repos:
-  - repository: Nizben/Demograd
-    description: Demograd is a minimal autograd engine and neural network library built for educational purposes.
-  - repository: Nizben/Enhanced_transformer
-    description: Kernel-Enhanced Geometric Transformer for 3D Point Cloud Processing
-  - repository: Nizben/mcmc
-    description: A repository for exploring Markov Chain Monte Carlo (MCMC) methods through theory, pseudocode, and interactive Jupyter Notebook implementations
-  - repository: Nizben/KeOps_Attention  
-    description: A KeOps based Attention implementation
+  - repository: "Nizben/Demograd"
+    description: "Demo project for showcasing X features."
+  - repository: "Nizben/Enhanced_transformer"
+    description: "Enhanced transformer implementation for Y tasks."
+  - repository: "Nizben/mcmc"
+    description: "Monte Carlo Markov Chain algorithms explained."
+  - repository: "Nizben/KeOps_Attention"
+    description: "Implementation of KeOps-based attention modules."
