--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,5 +1,5 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
+"NeurReps2025":
+  url: https://openreview.net/pdf?id=vSkYgUMYcZ
   color: "#00369f"
 
 "PhysRev":
