--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -2,6 +2,10 @@
   url: https://openreview.net/pdf?id=vSkYgUMYcZ
   color: "#00369f"
 
+"NEGEL 2025":
+  url: https://openreview.net/pdf?id=Z0YyuQNrzg
+  color: "#00369f"
+  
 "PhysRev":
   url: https://journals.aps.org/
 
